codigo/instalacion/SAL_deployment_openvpn.yml
apiVersion: v1
kind: Pod
metadata:
  name: openvpn
spec:
  containers:
  - name: openvpn
    image: openvpn
  ports:
   - containerPort: 1194
     protocol: TCP
  volumeMounts: 
  - name: openvpn-config
    mountPath: /etc/openvpn
  secrets: 
  - name: openvpn-config-secret
    name: openvpn-config-secret
    type: Secret
