codigo/instalacion/openvpn-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yaml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: openvpn
  name: openvpn
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: openvpn
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yaml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: openvpn
    spec:
      containers:
      - image: kylemanna/openvpn
        imagePullPolicy: ""
        name: openvpn
        ports:
        - containerPort: 1194
          protocol: UDP
        resources: {}
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
        volumeMounts:
        - mountPath: /etc/openvpn
          name: openvpn-claim0
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: openvpn-claim0
        persistentVolumeClaim:
          claimName: openvpn-claim0
status: {}
