codigo/instalacion/pod-contador.yaml
apiVersion: v1
kind: Pod
metadata:
  name: contador
spec:
  containers:
  - name: contar
  image: busybox
  args: [/bin/bash -c,
          'i=0; while true; do echo "$i(date)"; $i=$((i+1)); sleep 1; done']
