codigo/instalacion/openvpn-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yaml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: openvpn
  name: openvpn
spec:
  ports:
  - name: "1194"
    port: 1194
    protocol: UDP
    targetPort: 1194
  selector:
    io.kompose.service: openvpn
status:
  loadBalancer: {}
