codigo/instalacion/sal-kubernites-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sal-kubernites-svc
  labels:
    app: sal-kubernites-app
spec:
  type: ClusterIP
  selector:
    app: sal-kubernites-app
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 5000
