codigo/instalacion/sal-nginx-ns-deploy-svc.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Pod
  metadata:
    creationTimestamp: "2021-12-12T01:15:04Z"
    generateName: sal-kits-nginx-54786d4d9-
    labels:
      app: sal-kits-nginx
      pod-template-hash: 54786d4d9
    name: sal-kits-nginx-54786d4d9-vd5s2
    namespace: sal-nginx
    ownerReferences:
    - apiVersion: apps/v1
      blockOwnerDeletion: true
      controller: true
      kind: ReplicaSet
      name: sal-kits-nginx-54786d4d9
      uid: c08fb4d6-479a-4336-a8dd-48d1bb6b98e9
    resourceVersion: "51796"
    uid: 1142dc1d-6b1f-4afb-a9e4-56af02dee403
  spec:
    containers:
    - image: nginx
      imagePullPolicy: Always
      name: nginx
      resources: {}
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: kube-api-access-s7pb5
        readOnly: true
    dnsPolicy: ClusterFirst
    enableServiceLinks: true
    nodeName: minikube
    preemptionPolicy: PreemptLowerPriority
    priority: 0
    restartPolicy: Always
    schedulerName: default-scheduler
    securityContext: {}
    serviceAccount: default
    serviceAccountName: default
    terminationGracePeriodSeconds: 30
    tolerations:
    - effect: NoExecute
      key: node.kubernetes.io/not-ready
      operator: Exists
      tolerationSeconds: 300
    - effect: NoExecute
      key: node.kubernetes.io/unreachable
      operator: Exists
      tolerationSeconds: 300
    volumes:
    - name: kube-api-access-s7pb5
      projected:
        defaultMode: 420
        sources:
        - serviceAccountToken:
            expirationSeconds: 3607
            path: token
        - configMap:
            items:
            - key: ca.crt
              path: ca.crt
            name: kube-root-ca.crt
        - downwardAPI:
            items:
            - fieldRef:
                apiVersion: v1
                fieldPath: metadata.namespace
              path: namespace
  status:
    conditions:
    - lastProbeTime: null
      lastTransitionTime: "2021-12-12T01:15:04Z"
      status: "True"
      type: Initialized
    - lastProbeTime: null
      lastTransitionTime: "2021-12-12T01:15:07Z"
      status: "True"
      type: Ready
    - lastProbeTime: null
      lastTransitionTime: "2021-12-12T01:15:07Z"
      status: "True"
      type: ContainersReady
    - lastProbeTime: null
      lastTransitionTime: "2021-12-12T01:15:04Z"
      status: "True"
      type: PodScheduled
    containerStatuses:
    - containerID: docker://084c534f88cfc39dafe87d538652e903766003038578c7356651cfc9e7cdd5cd
      image: nginx:latest
      imageID: docker-pullable://nginx@sha256:9522864dd661dcadfd9958f9e0de192a1fdda2c162a35668ab6ac42b465f0603
      lastState: {}
      name: nginx
      ready: true
      restartCount: 0
      started: true
      state:
        running:
          startedAt: "2021-12-12T01:15:07Z"
    hostIP: 192.168.49.2
    phase: Running
    podIP: 172.17.0.7
    podIPs:
    - ip: 172.17.0.7
    qosClass: BestEffort
    startTime: "2021-12-12T01:15:04Z"
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2021-12-12T01:26:17Z"
    labels:
      app: sal-nginx-svc
    name: sal-nginx-svc
    namespace: sal-nginx
    resourceVersion: "52269"
    uid: 7d5c3860-ca9b-4cf7-aa29-7d33b7bdfd8a
  spec:
    clusterIP: 10.105.210.202
    clusterIPs:
    - 10.105.210.202
    externalTrafficPolicy: Cluster
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 80-80
      nodePort: 31848
      port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: sal-nginx-svc
    sessionAffinity: None
    type: NodePort
  status:
    loadBalancer: {}
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
    creationTimestamp: "2021-12-12T01:15:04Z"
    generation: 1
    labels:
      app: sal-kits-nginx
    name: sal-kits-nginx
    namespace: sal-nginx
    resourceVersion: "51798"
    uid: 1e1ef32c-66d9-4c3e-96ac-9a7c06c257a1
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: sal-kits-nginx
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: sal-kits-nginx
      spec:
        containers:
        - image: nginx
          imagePullPolicy: Always
          name: nginx
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2021-12-12T01:15:07Z"
      lastUpdateTime: "2021-12-12T01:15:07Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2021-12-12T01:15:04Z"
      lastUpdateTime: "2021-12-12T01:15:07Z"
      message: ReplicaSet "sal-kits-nginx-54786d4d9" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 1
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
- apiVersion: apps/v1
  kind: ReplicaSet
  metadata:
    annotations:
      deployment.kubernetes.io/desired-replicas: "1"
      deployment.kubernetes.io/max-replicas: "2"
      deployment.kubernetes.io/revision: "1"
    creationTimestamp: "2021-12-12T01:15:04Z"
    generation: 1
    labels:
      app: sal-kits-nginx
      pod-template-hash: 54786d4d9
    name: sal-kits-nginx-54786d4d9
    namespace: sal-nginx
    ownerReferences:
    - apiVersion: apps/v1
      blockOwnerDeletion: true
      controller: true
      kind: Deployment
      name: sal-kits-nginx
      uid: 1e1ef32c-66d9-4c3e-96ac-9a7c06c257a1
    resourceVersion: "51797"
    uid: c08fb4d6-479a-4336-a8dd-48d1bb6b98e9
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: sal-kits-nginx
        pod-template-hash: 54786d4d9
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: sal-kits-nginx
          pod-template-hash: 54786d4d9
      spec:
        containers:
        - image: nginx
          imagePullPolicy: Always
          name: nginx
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    fullyLabeledReplicas: 1
    observedGeneration: 1
    readyReplicas: 1
    replicas: 1
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
